--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,19 +3,29 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <title>nosotros</title>
  </head>
  <body>
   <header>
-    <h1 class="nombre__pagina">Por el mundo</h1>
-    <nav class="barra">
-     <ul>
-      <li><a href="../index.html" class="barra__inicio1">inicio</a></li>
-      <li><a href="información.html" class="barra__inicio2">información</a></li>
-      <li><a href="recomendaciones.html" class="barra__inicio3">recomendaciones</a></li>
-      <li><a href="contacto.html" class="barra__inicio4">contacto</a></li>
-     </ul>    
+    <nav class="navbar navbar-expand-lg bg-light navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" >POR EL MUNDO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
+            <a class="nav-link" href="./contacto.html">contacto</a>
+            <a class="nav-link" href="./información.html">informacion</a>
+            <a class="nav-link" href="nosotros.html">nosotros</a>
+            <a class="nav-link" href="./recomendaciones.html">recomendaciones</a>
+          </div>
+        </div>
+      </div>
     </nav>
   </header>
   <main>
