--- a/pages/recomendaciones.html
+++ b/pages/recomendaciones.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <title>recomendaciones</title>
 </head>
  <body>
   <header>
-    <h1 class="nombre__pagina">Por el mundo</h1>
-    <nav class="barra">
-        <ul>
-         <li><a href="../index.html" class="barra__inicio1">inicio</a></li>
-         <li><a href="información.html" class="barra__inicio2">información</a></li>
-         <li><a href="nosotros.html" class="barra__inicio3">nosotros</a></li>
-         <li><a href="contacto.html" class="barra__inicio4">contacto</a></li>
-        </ul>
-     </nav>
-  </header>
-  <main>
-    <div class="destinos_container">
-   <div>
-     <article >
-      <h2 class="destino1">Cataratas del iguazu</h2>
-      <img src="../img/iguazu.jpg" alt="cataratas" class="img">
-      <p class="texto1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus quam ac augue lobortis bibendum. Donec accumsan sed risus eu semper. Donec venenatis libero sed massa venenatis blandit. Curabitur massa felis, dictum eu iaculis sit amet, vulputate at arcu. Maecenas vehicula ultricies mi et maximus. Vestibulum interdum nulla vel imperdiet lobortis. Duis in nisl molestie, faucibus justo in, posuere ex.</p>
-    </article>
-   </div>
-   <div>
-     <article >
+    <nav class="navbar navbar-expand-lg bg-light navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" >POR EL MUNDO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
+            <a class="nav-link" href="./contacto.html">contacto</a>
+            <a class="nav-link" href="./información.html">informacion</a>
+            <a class="nav-link" href="./nosotros.html">nosotros</a>
+            <a class="nav-link" href="recomendaciones.html">recomendaciones</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+   <div> 
+    <article >
         <h2 class="destino2">los salares de jujuy</h2>
         <img src="../img/jujuy.jpg" alt="jujuy-salares" class="img2">
         <p class="texto2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempus quam ac augue lobortis bibendum. Donec accumsan sed risus eu semper. Donec venenatis libero sed massa venenatis blandit. Curabitur massa felis, dictum eu iaculis sit amet, vulputate at arcu. Maecenas vehicula ultricies mi et maximus. Vestibulum interdum nulla vel imperdiet lobortis. Duis in nisl molestie, faucibus justo in, posuere ex.</p>
