se modifico el index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="#" class="btn btn-primary">mas info</a>
       </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card col-sm-12s" style="width: 18rem;">
       <img src="./img/iguazu.jpg" class="card-img-top" alt="paisaje-cataratas">
       <div class="card-body">
         <h5 class="card-title">iguazu</h5>
@@ -70,13 +70,33 @@
       </div>
     </div>
    </div>
-
+  
   </main>
-
+  
   <footer>
-
+  <div class="footer__container">
+   <div class="form-floating">
+      <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+        <option selected>Buenos Aires</option>
+        <option value="1">la Pampa</option>
+        <option value="2">Mendoza</option>
+        <option value="3">Cordoba</option>
+        <option value="4">Misiones</option>
+        <option value="5">Salta</option>
+        <option value="6">Jujuy</option>
+        <option value="3">Chubut</option>
+        <option value="3">Rio negro</option>
+      </select>
+      <label for="floatingSelect">Selecciona tu provincia</label>
+   </div>
+   <div class="pie-de-pagina">
+    <a href="#">ayuda</a>
+    <a href="#">ofertas de empleo</a>
+    <a href="#">prensa</a>
+   </div>
+  </div>
   </footer>
- </div>
+ 
 </body>
   
 </html>
